# gcplayer

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt
forms/: controlbar.ui  mainwindow.ui  playerwidget.ui  playlist.ui  titlebar.ui
include/gcplayer/: controlbar.h  gcvollabel.h  log.h  mainwindow.h  playerwidget.h  playlist.h  titlebar.h  utils.h
res/: res.qrc
res/qss/: playlist.css  titlebar.css
src/: controlbar.cpp  gcvollabel.cpp  log.c  main.cpp  mainwindow.cpp  playerwidget.cpp  playlist.cpp  titlebar.cpp  utils.cpp
